Fixed the overlapping of the list resources

--- a/ckanext/datagovmk/fanstatic/less/_resources.less
+++ b/ckanext/datagovmk/fanstatic/less/_resources.less
@@ -47,7 +47,7 @@
 
 @media (max-width: 1000px) {
   .resource-item {
-    height: 130px;
+    height: 250px;
   }
 
   .resource-item {
